// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsletterPuffButton renders the button with the text \`Saving...\` 1`] = `
<View
  accessibilityLabel="Saving…"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#006699",
        "borderRadius": 2,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 100,
        "width": "100%",
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#1D1D1B",
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "#1D1D1B",
        "elevation": 0,
        "fontFamily": "GillSansMTStd-Medium",
        "height": 45,
        "justifyContent": "center",
        "letterSpacing": 0.2,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 16,
          "lineHeight": 16,
          "paddingTop": 5,
        },
        null,
        null,
        Object {
          "color": "#1D1D1B",
        },
      ]
    }
    title="Saving…"
  >
    Saving…
  </Text>
</View>
`;

exports[`NewsletterPuffButton renders the button with the text \`Sign up to newsletter\` 1`] = `
<View
  accessibilityLabel="Sign up to newsletter"
  accessibilityRole="button"
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "#006699",
        "borderRadius": 2,
        "height": 45,
        "justifyContent": "center",
        "minWidth": 100,
        "width": "100%",
      },
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "#1D1D1B",
        "borderStyle": "solid",
        "borderWidth": 2,
        "color": "#1D1D1B",
        "elevation": 0,
        "fontFamily": "GillSansMTStd-Medium",
        "height": 45,
        "justifyContent": "center",
        "letterSpacing": 0.2,
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 16,
          "lineHeight": 16,
          "paddingTop": 5,
        },
        null,
        null,
        Object {
          "color": "#1D1D1B",
        },
      ]
    }
    title="Sign up to newsletter"
  >
    Sign up to newsletter
  </Text>
</View>
`;

exports[`NewsletterPuffButton should track button viewed and clicked in analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "NewsletterPuffButton",
    },
  ],
  Array [
    Object {
      "action": "onPress",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
        "updatingSubscription": false,
      },
      "component": "widget : puff : sign up to newsletter",
      "object": "NewsletterPuffButton",
    },
  ],
]
`;

exports[`NewsletterPuffButton should track button viewed in analytics 1`] = `
Array [
  Array [
    Object {
      "action": "Viewed",
      "attrs": Object {
        "eventTime": "2018-01-01T00:00:00.000Z",
      },
      "component": "Page",
      "object": "NewsletterPuffButton",
    },
  ],
]
`;
